[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygenguard"
version = "0.2.0"
description = "Runtime security and governance framework for GenAI systems"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "PyGenGuard Contributors"}
]
keywords = [
    "security",
    "genai",
    "llm",
    "guardrails",
    "trust",
    "compliance",
    "audit",
    "async",
    "plugins"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Framework :: AsyncIO"
]

# ZERO heavy dependencies - pure Python core
dependencies = []

[project.optional-dependencies]
# Redis adapter for distributed sessions
redis = [
    "redis>=4.2.0"
]
# Full development dependencies
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0"
]
# All optional features
all = [
    "redis>=4.2.0"
]

[project.urls]
Homepage = "https://github.com/Jayasudhandesigner/pytrialguard"
Documentation = "https://github.com/Jayasudhandesigner/pytrialguard#readme"
Repository = "https://github.com/Jayasudhandesigner/pytrialguard"
Issues = "https://github.com/Jayasudhandesigner/pytrialguard/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pygenguard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
